Wrapped :hover state in media query to prevent it happening on mobile and slowing things down

--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -14,11 +14,14 @@
     text-transform: uppercase;
     font-family: $font-face-montserrat;
     background-color: $body-text-color;
-    transition: 0.3s;
-    &:hover {
-      // TODO figure out why important is needed
-      color: #FFF !important;
-      background-color: darken($body-text-color, 40%);
+
+    @media (min-width: $screen-sm-min) {
+      transition: 0.3s;
+      &:hover {
+        // TODO figure out why important is needed
+        color: #FFF !important;
+        background-color: darken($body-text-color, 40%);
+      }
     }
   }
 
